--- a/client/css.css
+++ b/client/css.css
@@ -178,7 +178,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(http://lorempixel.com/output/food-q-g-1920-1080-10.jpg);
+    background-image: url(http://lorempixel.com/g/1920/1080/food);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
