--- a/client/css.css
+++ b/client/css.css
@@ -213,7 +213,7 @@ header .header-content .header-content-inner p {
 
 @media(min-width:768px) {
     header {
-        min-height: 100vh;
+        min-height: calc(100vh - 50px);
     }
 
     header .header-content {
